--- a/styles.css
+++ b/styles.css
@@ -95,9 +95,13 @@
 html {
     overflow-x: hidden;
     scrollbar-width: thin;
+    width: 100%;
+    height: 100%;
 }
 
 body {
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     overflow-x: hidden;
